header: fix album art z-index

--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -40,6 +40,7 @@ header {
 
 .header-content {
   align-items: center;
+  z-index: 5;
 }
 
 .star-wrapper {
