--- a/resources/assets/sass/pages/music.scss
+++ b/resources/assets/sass/pages/music.scss
@@ -96,13 +96,14 @@ table {
 #album-art {
   width: 300px;
   height: 300px;
-  opacity: 0.3;
+  opacity: 0.8;
   text-align: center;
   position: absolute;
   left: 50%;
   top: 50%;
   margin-left: -150px;
   margin-top: -150px;
+  z-index: -1;
 }
 
 // Tablet and desktop
